Bug 307609 - Zoom effect broken in master
Summary: Zoom effect broken in master
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: git master
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 4.10
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-30 11:19 UTC by Christoph Feck
Modified: 2012-09-30 19:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
qdbus org.kde.kwin /KWin supportInformation (3.18 KB, text/plain)
2012-09-30 11:19 UTC, Christoph Feck
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Feck 2012-09-30 11:19:36 UTC
Created attachment 74241 [details]
qdbus org.kde.kwin /KWin supportInformation

Zoom effect ("Magnify the entire desktop") does no longer work. The last compile is about two weeks ago, so a lot of commits could have introduced it.

I have set scale factor to 2.0, but pressing the Zoom In hotkey, the screen turns black, and only a very small thumbnail of the screen appears. Interestingly, using Zoom Out instead will zoom in, but not by a factor of 2.0, but much more (10.0?).
Comment 1 Christoph Feck 2012-09-30 11:24:04 UTC
qdbus org.kde.kwin /KWin supportInformation says:

zoomFactor: 0.1

but in the settings dialog of the Zoom plugin, I see 2.0.
Comment 2 Thomas Lübking 2012-09-30 11:27:18 UTC
Set it to 120

It's commit 150cba5552312642466f2ecccfc383140faa48fe (KConfigXT)
The scale dimension was adjusted (f/100), but the UI still has a doublespinbox and i'm not sure whether there's been a kconf update script that should have been running.
Comment 3 Martin Flöser 2012-09-30 11:29:11 UTC
thanks for the note, yeah kconf update script is missing. I will add that once the review is merged which introduces a kconf update script (plastik). Also cube effect needs an adjustment and translucency (that's why it's not yet merged)
Comment 4 Thomas Lübking 2012-09-30 11:33:23 UTC
diff --git a/kwin/effects/zoom/zoom.cpp b/kwin/effects/zoom/zoom.cpp
index 587de03..2c42ae8 100644
--- a/kwin/effects/zoom/zoom.cpp
+++ b/kwin/effects/zoom/zoom.cpp
@@ -206,7 +206,7 @@ void ZoomEffect::reconfigure(ReconfigureFlags)
 {
     ZoomConfig::self()->readConfig();
     // On zoom-in and zoom-out change the zoom by the defined zoom-factor.
-    zoomFactor = qMax(0.1, ZoomConfig::zoomFactor()/100.0);
+    zoomFactor = qMax(0.1, ZoomConfig::zoomFactor());
     // Visibility of the mouse-pointer.
     mousePointer = MousePointerType(ZoomConfig::mousePointer());
     // Track moving of the mouse.


-- 
The KConfigXT uses 1.20 as default, so the divisor is wrong.
@Martin, got a push ok?
Comment 5 Martin Flöser 2012-09-30 11:44:48 UTC
(In reply to comment #4)
> @Martin, got a push ok?
ship it
Comment 6 Thomas Lübking 2012-09-30 12:11:19 UTC
Git commit 8171c12ed8ba4c26c715afb35063c8084c10c7e4 by Thomas Lübking.
Committed on 30/09/2012 at 13:50.
Pushed by luebking into branch 'master'.

fix zoom factor scale, remains double

M  +1    -1    kwin/effects/zoom/zoom.cpp

http://commits.kde.org/kde-workspace/8171c12ed8ba4c26c715afb35063c8084c10c7e4