fix zoom factor scale, remains double

BUG: 307609